# webscenarios

./: .gitignore  README.md  pyproject.toml
webscenarios/: dash_demo.py  panel_demo.py  panel_df_apply_demo.py  panel_multiplying_scenario_demo.py
